# uio-dma

./: ChangeLog  Doxyfile.in  Makefile.am  README  TODO  bootstrap  configure.in  uio-dma.pc.in  uio-dma.spec.in
kmod/: Makefile.in  uio-dma-pci.c  uio-dma.c  uio-dma.h
tests/: Makefile.am  api.c
ulib/: Makefile.am  uio-dma-ioctl.h  uio-dma.c  uio-dma.h
