dnl Process this file with autoconf to produce a configure script.

AC_INIT()

AC_CANONICAL_SYSTEM

AC_PREFIX_DEFAULT(/usr)

VERSION=`cat $srcdir/VERSION`
AC_SUBST(VERSION)
AM_INIT_AUTOMAKE(uio-dma, $VERSION)
AC_DEFINE_UNQUOTED(BUILDATE, "`date '+%D %k:%M:%S'`")

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL

AC_PROG_LIBTOOL

AC_ARG_ENABLE(debug,
        AC_HELP_STRING([--enable-debug], [Enable debug support]),
        AC_DEFINE(DEBUG)
)

AC_SUBST(KDIR)
AC_ARG_WITH(kernel,
        AC_HELP_STRING([--with-kernel=<directory>], [Location of the kernel sources]),
	KDIR=$withval,
	KDIR=/lib/modules/`uname -r`/build
)

AC_SUBST(KVER)
AC_SUBST(KVER_RPM)
if ! test -f $KDIR/include/linux/utsrelease.h; then
	echo Missing kernel headers
	exit 1
fi

KVER=`sed -e 's/.*"\(.*\)"/\1/' $KDIR/include/linux/utsrelease.h`
KVER_RPM=`echo $KVER | tr -d '-'`

AC_CONFIG_LINKS(include/uio-dma/uio-dma.h:$srcdir/ulib/uio-dma.h)

AC_SUBST(prefix)

AC_OUTPUT([
    Makefile
    kmod/Makefile
    ulib/Makefile
    tests/Makefile
    Doxyfile
    uio-dma.spec
    uio-dma.pc
])
